initial blogs setup, turn off counter on scroll

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -240,6 +240,28 @@ hr.highlight {
   }
 }
 /* End Navbar */
+/* Start Blogs */
+.blogs .thumbnail {
+  border-color: #e9f6fb;
+  border-width: 3px;
+}
+.blogs .thumbnail:hover {
+  border-color: #1fa7d6;
+}
+.blogs p.desc {
+  min-height: 45px;
+  border-bottom: 10px;
+}
+.list-blogs .fa {
+  display: none;
+}
+.template-article .comment-social {
+  border-color: #1fa7d6;
+}
+#fellos .thumbnail {
+  border-color: #e9f6fb;
+}
+/* End Blogs */
 /* Start Collections Page Styles */
 .pro-add-to-cart hr {
   border-color: rgba(31, 167, 214, 0.3);
