--- a/snippets/blog-gallery.liquid
+++ b/snippets/blog-gallery.liquid
@@ -34,6 +34,7 @@
         {% endif %}
 
       </div>
+      <hr class="highlight" />
       <a class="readmore" href="{{ article.url }}">{{ 'blogs.article.read_more' | t }}</a>
 
       {% else %}
