--- a/templates/article.gallery.liquid
+++ b/templates/article.gallery.liquid
@@ -14,7 +14,8 @@
               {% if blog.comments_enabled? %}
                 <span class="count-comment">{{article.comments_count}}</span>   
               {% endif %}                            
-            </span>                                   
+            </span>
+            <img src="{{ article.image.src | img_url: 'medium' }}" alt="{{ article.title }}">
            </div>
           <div class="post-thumbnail">                               
             {% assign excerpt_start =  article.excerpt | split: '[end]' %}
@@ -37,14 +38,14 @@
               {% include 'social-sharing' %}
         </div>
       </div>
-      <div class="author-info-wrap">
+<!--       <div class="author-info-wrap">
         <div class="avatar"><img class="avatar avatar-68 photo" src="//www.gravatar.com/avatar/{{ article.user.email | md5 }}?s=50" alt="{{article.author}}"></div>
         <div class="content">
           <div class="author-name"><a href="#">Admin</a></div>
           <div class="text"><p>{{article.user.bio | strip_html }}</p></div>
         </div>
-      </div>
-      <div class="related-wrap">
+      </div> -->
+<!--       <div class="related-wrap">
         <h4 class="related-title"> {{ 'blogs.article.title_recent_post' | t }}</h4>                            
            <ul class="blog-related row">
              {% for article in blogs[blog.handle].articles  limit:3 %}
@@ -68,7 +69,7 @@
                 </li>
               {% endfor %}           
         </ul>
-      </div>
+      </div> -->
 
       {% paginate article.comments by 5 %}
 
@@ -136,8 +137,5 @@
             </div>  
         </div>
       {% endpaginate %}
-      {% assign margin_shipping_icon = "margin-top-60" %}
-      {% assign container_shipping_icon = "" %}
-      {% include 'shortcode-shipping-icon' %}
     </div>
   </div>
