--- a/templates/page.blogs.liquid
+++ b/templates/page.blogs.liquid
@@ -5,22 +5,24 @@
   {% assign title = "Fashion" %}
   {% assign description = "We love fashion here, and we know you do too." %}
   {% assign href = "https://www.felloeyewear.com/blogs/fashion" %}
-  {% assign btn_text = "Try it On" %}
+  {% assign btn_text = "Coming Soon" %}
   {% include "blog-tile" %}
 
   {% assign img_src = "travel-blog.jpg" %}
   {% assign title = "Travel" %}
   {% assign description = "Where do you want to go?" %}
   {% assign href = "https://www.felloeyewear.com/blogs/travel" %}
-  {% assign btn_text = "Take a Trip" %}
+  {% assign btn_text = "Coming Soon" %}
+  {% include "blog-tile" %}
+  
+  {% assign img_src = "sports-blog.jpg" %}
+  {% assign title = "Sports" %}
+  {% assign description = "Let the games begin" %}
+  {% assign href = "https://www.felloeyewear.com/blogs/sports" %}
+  {% assign btn_text = "Take a Shot" %}
   {% include "blog-tile" %}
 
-  {% assign img_src = "photography-blog.jpg" %}
-  {% assign title = "Photography" %}
-  {% assign description = "It can't be that hard can it? ...Wrong" %}
-  {% assign href = "https://www.felloeyewear.com/blogs/photography" %}
-  {% assign btn_text = "Behold the Beauty" %}
-  {% include "blog-tile" %}
+
 </div>
 
 <div class="row blogs">
@@ -29,10 +31,13 @@
   {% assign description = "" %}
   {% include "blog-tile" %}
 
-  {% assign img_src = "" %}
-  {% assign title = "Sports" %}
-  {% assign description = "" %}
+  {% assign img_src = "photography-blog.jpg" %}
+  {% assign title = "Photography" %}
+  {% assign description = "It can't be that hard can it? ...Wrong" %}
+  {% assign href = "https://www.felloeyewear.com/blogs/photography" %}
+  {% assign btn_text = "Behold the Beauty" %}
   {% include "blog-tile" %}
+
 
   {% assign img_src = "" %}
   {% assign title = "Technology" %}
