--- a/templates/blog.nosidebar.liquid
+++ b/templates/blog.nosidebar.liquid
@@ -2,9 +2,12 @@
 
 {% paginate blog.articles by 6 %}
 <div class="main-container list-blogs">
-  <div class="container">
-      <h1 class="page-title">{{ blog.title }}</h1>
-      <div class="blog-grid butique-masonry">
+{% assign title = blog.title %}
+{% include 'blog-header' %}
+<!--       <h1 class="page-title">{{ blog.title }}</h1> -->
+    <div class="container">
+
+  <div class="blog-grid butique-masonry">
           <div class="masonry-grid" data-layoutmode="masonry" data-cols="3">
             {% for article in blog.articles %}
                 {% case article.template_suffix %}
@@ -28,6 +31,6 @@
         </div>
       {% endif %}
 
-  </div>
+</div>
 </div>
 {% endpaginate %}
