--- a/snippets/fello-tile.liquid
+++ b/snippets/fello-tile.liquid
@@ -1,5 +1,5 @@
-<div class="col-sm-6 col-md-4 col-lg-3 minor-v-pads minor-h-pads no-margin">
-  <div class="thumbnail sharp">
+<div class="col-sm-6 col-md-4 minor-v-pads minor-h-pads no-margin">
+  <div class="thumbnail sharp blogger">
     <img src="{{ img_src | file_url }}" alt="...">
     <div class="caption">
       <h3 class="blue small-caps">{{ name }}</h3>
