--- a/templates/article.gallery.liquid
+++ b/templates/article.gallery.liquid
@@ -120,10 +120,10 @@
               <h3 class="comment-reply-title">{{ 'blogs.comments.title' | t }}</h3>
               {% form 'new_comment', article %}
                   
-                  {{ form.errors | default_errors }}
+<!--                   {{ form.errors | default_errors }} -->
                       <input type="text" name="comment[author]" id="CommentAuthor" class="input-full{% if form.errors contains 'author' %} error{% endif %}" placeholder="{{ 'blogs.comments.name' | t }}" value="{{ form.author }}" autocapitalize="words">
                       
-                      <input type="text" name="comment[email]" id="CommentEmail" class="input-full{% if form.errors contains 'email' %} error{% endif %}" placeholder="{{ 'blogs.comments.email' | t }}" value="{{ form.email }}" autocorrect="off" autocapitalize="off">
+<!--                       <input type="text" name="comment[email]" id="CommentEmail" class="input-full{% if form.errors contains 'email' %} error{% endif %}" placeholder="{{ 'blogs.comments.email' | t }}" value="{{ form.email }}" autocorrect="off" autocapitalize="off"> -->
                       
                       <textarea name="comment[body]" id="CommentBody" class="comment-form-comment {% if form.errors contains 'body' %} error{% endif %}" placeholder="{{ 'blogs.comments.message' | t }}">{{ form.body }}</textarea>                         
                       
