--- a/templates/collection.columns3.liquid
+++ b/templates/collection.columns3.liquid
@@ -1,16 +1,11 @@
-{% if settings.enable_banner_content_collection %}
-  <div class="banner">
-    <div class="banner-content">
-      {{ '1.jpg' | asset_url | img_tag }}
-    </div>
-  </div>
-{% endif %}
+<h1 class="jumbotron text-center shop-classic-banner">Shop Classic</h1>
+
 <div class="main-container no-slidebar">
 	<div class="container">
 		<div class="row">
 			<div class="main-content col-sm-12">
 			{% paginate collection.products by 6 %}
-				<div class="shop-top">
+<!-- 				<div class="shop-top">
 					<div class="shop-top-left">
 						<div class="breadcrumbs">
 		                    {% include "breadcrumb" %}
@@ -23,7 +18,7 @@
 	                    </div>
 	                    {% include 'collection-views' %}
 					</div>
-				</div>
+				</div> -->
 				<ul class="product-list-grid desktop-columns-3 tablet-columns-3 mobile-columns-1 row flex-flow" id="collection-product">
 		          {% for product in collection.products %}
 		            {% assign grid_item_width = 'col-sm-4' %}
