--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -17,7 +17,7 @@
 {% assign rows = settings.collections_rows %}
 {% assign total_products = products_per_row | times: rows %}
 
-<h1 class="jumbotron text-center shop-classic-banner">Shop Classic</h1>
+<h1 class="jumbotron text-center shop-all-banner">Shop</h1>
 
 <div class="main-container left-slidebar">
   <div class="container">
