--- a/templates/page.blogs.liquid
+++ b/templates/page.blogs.liquid
@@ -1,28 +1,26 @@
-<h1 class="text-center jumbotron section-header__title no-margin blue-bg">Reads</h1>
+<h1 class="jumbotron text-center blogs-banner blogs-banner-base">Fello Features</h1>
 
 <div class="row blogs">
   {% assign img_src = "fashion-blog.jpg" %}
   {% assign title = "Fashion" %}
   {% assign description = "We love fashion here, and we know you do too." %}
   {% assign href = "https://www.felloeyewear.com/blogs/fashion" %}
-  {% assign btn_text = "Coming Soon" %}
+  {% assign btn_text = "Try it On" %}
   {% include "blog-tile" %}
 
   {% assign img_src = "travel-blog.jpg" %}
   {% assign title = "Travel" %}
   {% assign description = "Where do you want to go?" %}
   {% assign href = "https://www.felloeyewear.com/blogs/travel" %}
-  {% assign btn_text = "Coming Soon" %}
+  {% assign btn_text = "Take a Trip" %}
   {% include "blog-tile" %}
-  
+
   {% assign img_src = "sports-blog.jpg" %}
   {% assign title = "Sports" %}
-  {% assign description = "Let the games begin" %}
+  {% assign description = "It's more than just a game." %}
   {% assign href = "https://www.felloeyewear.com/blogs/sports" %}
-  {% assign btn_text = "Take a Shot" %}
+  {% assign btn_text = "Play some Ball" %}
   {% include "blog-tile" %}
-
-
 </div>
 
 <div class="row blogs">
@@ -31,13 +29,10 @@
   {% assign description = "" %}
   {% include "blog-tile" %}
 
-  {% assign img_src = "photography-blog.jpg" %}
-  {% assign title = "Photography" %}
-  {% assign description = "It can't be that hard can it? ...Wrong" %}
-  {% assign href = "https://www.felloeyewear.com/blogs/photography" %}
-  {% assign btn_text = "Behold the Beauty" %}
+  {% assign img_src = "" %}
+  {% assign title = "Sports" %}
+  {% assign description = "" %}
   {% include "blog-tile" %}
-
 
   {% assign img_src = "" %}
   {% assign title = "Technology" %}
