--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -3,19 +3,23 @@
 {% if comment and comment.created_at %}
 {% assign number_of_comments = article.comments_count | plus: 1 %}
 {% endif %}
-<div class="main-container">
+<div class="main-container" style="padding-bottom: 0px;">
     <div class="container">
       <div class="blog-detail">
         <article class="blog-item" itemscope itemtype="http://schema.org/Article">
           <h1 class="blog-title">{{ article.title }}</h1>
+          <img class="text-center" src="{{ article.image.src | img_url: 'large' }}" alt="{{ article.title }}">
           <div class="entry-meta">
             <span class="post-date">{{ article.published_at | date: "%d %b %Y" }}</span>
-                      <span class="blog-comment"><i class="fa fa-comment"></i>
-                    {% if blog.comments_enabled? %}
-                    <span class="count-comment">{{article.comments_count}}</span>   
-                    {% endif %}                            
-                  </span>                                   
-                  </div>
+            <span class="blog-comment"><i class="fa fa-comment"></i>
+              {% if blog.comments_enabled? %}
+              <span class="count-comment">{{article.comments_count}}</span>   
+              {% endif %}                            
+            </span>                                   
+          </div>
+
+          <hr class="highlight" />
+
           <div class="post-thumbnail">                               
             {% assign excerpt_start =  article.excerpt | split: '[end]' %}
             {% assign end_excerpt =  excerpt_start[0]  | split: '[start]'  %}
@@ -25,6 +29,15 @@
           </div>
         </article>
       </div>
+
+      <hr class="highlight" />
+      
+      {% if article.tags contains 'Jake' %} 
+      {% assign auth = 'Jake Portanova' %}
+      {% assign auth_img_src = 'jake-blogger.jpg' %}
+      {% include 'author' %}
+      {% endif %}
+
       <div class="comment-social">  
         {% if blog.comments_enabled? %}
             <h4>{{ 'blogs.comments.comments_with_count' | t: count: number_of_comments }}</h4>   
@@ -71,7 +84,7 @@
 
         <div id="comments">
             {% if blog.comments_enabled? %}
-                  <h4 class="comment-list-title">{{ 'blogs.comments.comments_with_count' | t: count: number_of_comments }}</h4>
+<!--                   <h4 class="comment-list-title">{{ 'blogs.comments.comments_with_count' | t: count: number_of_comments }}</h4> -->
               {% endif %}
 
               {% if comment and comment.created_at %}
@@ -111,9 +124,9 @@
                       {{ paginate | default_pagination | replace: '&laquo; Previous', '&larr;' | replace: 'Next &raquo;', '&rarr;' }}
                     </div>
                   {% endif %}
-                {% endif %}                           
+                {% endif %}
             
-            <div class="comment-form-reply">
+            <div class="comment-form-reply" style="border-top: none;">
               <h3 class="comment-reply-title">{{ 'blogs.comments.title' | t }}</h3>
               {% form 'new_comment', article %}
                   
