move fyf to the front page and first product tab

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -750,7 +750,7 @@ img.photo-cred {
   margin: 50px 30px;
 }
 /* End Photo Credits */
-/* End Collab */
+/* Start Collab */
 
 /* End Collab */
 /* Start Find Your Face */
@@ -759,14 +759,11 @@ img.photo-cred {
 }
 #wizard .panel {
   border: none;
-  border-bottom: 4px solid transparent;
   box-shadow: none;
-}
-#wizard .panel:hover {
-  border-bottom: 4px solid #1fa7d6;
+  cursor: pointer;
 }
 #wizard .step span.icon {
- font-size: 130px;   
+ font-size: 150px;   
 }
 #selected li {
   width: 20%;
@@ -843,10 +840,11 @@ img.photo-cred {
   margin: auto;
 }
 .step .step-message {
-  margin-top: 5%;
+  margin-top: 3%;
+  font-variant: small-caps;
 }
 .step img {
-  max-width: 80%;
+  max-width: 50%;
   margin-bottom: 5%;
 }
 #selected img {
