--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -87,7 +87,7 @@
 </div>
 
 
-<div class="pillar">
+<!-- <div class="pillar">
   <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel sharp">
 
     <img src="{{ 'white_pillar.jpg' | asset_url }}" alt="Fello Ambassador">
@@ -116,6 +116,31 @@
 
     </div>
   </div>
+</div> -->
+
+
+<div class="pillar">
+  <a class="full-w" href="/pages/find-your-face" title="shop instagram">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 amb panel sharp">
+
+      <img src="{{ 'find-your-face.jpg' | file_url }}" alt="Find Your Face">
+
+      <div class="panel-body text-center">
+
+        <div class="pillar-cover row-eq-height">
+
+          <div class="v-center full-w">
+
+            <h2 class="white"><strong>FIND YOUR FACE</strong></h2>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+  </a>
 </div>
 
 
@@ -263,7 +288,7 @@
 
 <script 
 src='https://snapppt.com/widgets/widget_loader/5aae36b1-7142-4fe2-a099-0abc609ab375/grid.js'
- class='snapppt-widget'>
+ class='snapppt-widget' crossorigin='anonymous'>
 </script>
 {{ 'odometer.js' | asset_url | script_tag }}
 <script>
