--- a/snippets/product-find-your-face.liquid
+++ b/snippets/product-find-your-face.liquid
@@ -51,21 +51,21 @@
       <h4 class="visible-xs step-message">Select One</h4>
 
       <div class="pillar col-xs-12 col-sm-6">
-        <div class="panel sharp pointer med-v-pads" data-sex="female">
+        <div class="panel sharp pointer" data-sex="female">
 
           <span class="icon pe-7s-user-female"></span>
           <br>
-          <h1 class="highlight">Female</h1>
+          <h1>Female</h1>
 
         </div>
       </div>
 
       <div class="pillar col-xs-12 col-sm-6">
-        <div class="panel sharp pointer med-v-pads" data-sex="male">
+        <div class="panel sharp pointer" data-sex="male">
 
           <span class="icon pe-7s-user"></span>
           <br>
-          <h1 class="highlight">Male</h1>
+          <h1>Male</h1>
 
         </div>
       </div>
@@ -78,34 +78,34 @@
       <h4 class="visible-xs step-message">What's Your Face Shape?</h4>
 
       <div class="pillar col-xs-12 col-sm-4">
-        <div class="panel sharp pointer med-v-pads" data-shape="oval">
+        <div class="panel sharp pointer" data-shape="oval">
 
           <img src="{{ 'male-oval-face.png' | file_url }}" alt="male oval face" class="male">
           <img src="{{ 'female-oval-face.png' | file_url }}" alt="female oval face" class="female hidden">
           <br>
-          <h1 class="highlight">Oval</h1>
+          <h1>Oval</h1>
 
         </div>
       </div>
 
       <div class="pillar col-xs-12 col-sm-4">
-        <div class="panel sharp pointer med-v-pads" data-shape="round">
+        <div class="panel sharp pointer" data-shape="round">
 
           <img src="{{ 'male-round-face.png' | file_url }}" alt="male round face" class="male">
           <img src="{{ 'female-round-face.png' | file_url }}" alt="female round face" class="female hidden">
           <br>
-          <h1 class="highlight">Round</h1>
+          <h1>Round</h1>
 
         </div>
       </div>
 
       <div class="pillar col-xs-12 col-sm-4">
-        <div class="panel sharp pointer med-v-pads" data-shape="square">
+        <div class="panel sharp pointer" data-shape="square">
 
           <img src="{{ 'male-square-face.png' | file_url }}" alt="male square face" class="male">
           <img src="{{ 'female-square-face.png' | file_url }}" alt="female square face" class="female hidden">
           <br>
-          <h1 class="highlight">Square</h1>
+          <h1>Square</h1>
 
         </div>
       </div>
@@ -118,7 +118,7 @@
       <h4 class="visible-xs step-message">What's Your Hair Color?</h4>
 
       <div class="pillar col-xs-12 col-sm-4">
-        <div class="panel sharp pointer med-v-pads" data-hair="blonde">
+        <div class="panel sharp pointer" data-hair="blonde">
 
           <img src="{{ 'male-oval-face-blonde.png' | file_url }}" alt="male oval blonde" class="male oval">
           <img src="{{ 'male-square-face-blonde.png' | file_url }}" alt="male square blonde" class="male square hidden">
@@ -127,13 +127,13 @@
           <img src="{{ 'female-square-face-blonde.png' | file_url }}" alt="female square blonde" class="hidden female square">
           <img src="{{ 'female-round-face-blonde.png' | file_url }}" alt="female round blonde" class="hidden female round">
           <br>
-          <h1 class="highlight">Blonde</h1>
+          <h1>Blonde</h1>
 
         </div>
       </div>
 
       <div class="pillar col-xs-12 col-sm-4">
-        <div class="panel sharp pointer med-v-pads" data-hair="brown">
+        <div class="panel sharp pointer" data-hair="brown">
 
           <img src="{{ 'male-oval-face-brown.png' | file_url }}" alt="male oval brown" class="male oval">
           <img src="{{ 'male-square-face-brown.png' | file_url }}" alt="male square brown" class="male square hidden">
@@ -142,13 +142,13 @@
           <img src="{{ 'female-square-face-brown.png' | file_url }}" alt="female square brown" class="hidden female square">
           <img src="{{ 'female-round-face-brown.png' | file_url }}" alt="female round brown" class="hidden female round">
           <br>
-          <h1 class="highlight">Brown</h1>
+          <h1>Brown</h1>
 
         </div>
       </div>
 
       <div class="pillar col-xs-12 col-sm-4">
-        <div class="panel sharp pointer med-v-pads" data-hair="black">
+        <div class="panel sharp pointer" data-hair="black">
 
           <img src="{{ 'male-oval-face-black.png' | file_url }}" alt="male oval black" class="male oval">
           <img src="{{ 'male-square-face-black.png' | file_url }}" alt="male square black" class="male square hidden">
@@ -157,7 +157,7 @@
           <img src="{{ 'female-square-face-black.png' | file_url }}" alt="female square black" class="hidden female square">
           <img src="{{ 'female-round-face-black.png' | file_url }}" alt="female round black" class="hidden female round">
           <br>
-          <h1 class="highlight">Black</h1>
+          <h1>Black</h1>
 
         </div>
       </div>
