--- a/assets/added.js.liquid
+++ b/assets/added.js.liquid
@@ -11,3 +11,8 @@ $(".pillar .panel.amb").hover(function() {
 Array.prototype.diff = function(a) {
   return this.filter(function(i) {return a.indexOf(i) < 0;});
 };
+
+
+$("#wizard .pillar").hover(function() {
+  $(this).find("h1").toggleClass("highlight");
+});
