--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -222,7 +222,16 @@ hr.highlight {
   height: 30px !important;
 }
 /* End Footer */
-
+/* Start Header */
+.site-banner {
+  height: 50px;
+  background-color: #1fa7d6;
+  font-size: 17px;
+}
+.site-banner p {
+  margin: auto;
+}
+/* End Header */
 /* Start Navbar */
 .header.style3 .box-settings {
   padding: 0 10px;
