--- a/snippets/footer-index2.liquid
+++ b/snippets/footer-index2.liquid
@@ -156,8 +156,8 @@
 </div>
 <script>
   var names = [
-    "Haydee", "Hermila", "Laurine", "Ronald", "Jo", "Ezequiel", "Harriette", "Cristin", "Chad", "Jolynn", "Kum", "Cherish", "Felicitas", "Abbey", "Pamella", "Hyman", "Clarice", "Lois", "Eugena", "Ivey", "Karlyn", "Evonne", "Isabel", "Aurea", "Hollis", "Lashay", "Jamila", "Roselee", "Dimple", "George", "Everett", "Lakeshia", "Benton", "Bennie", "Yen", "Lien", "Laraine", "Eufemia", "Lucile", "Walker", "Clarinda", "Tammie", "Brendan", "Hillary", "Meggan", "Norma", "Federico", "Berniece", "Rochell", "Lawana",
-    "Alverta", "Herminia", "Rochell", "Jerald", "Johnsie", "Lashunda", "Elly", "Floyd", "Chandra", "Diedra", "Jenise", "Maureen", "Lanora", "Darryl", "Miranda", "Justa", "Lucrecia", "Renita", "Sophia", "Robert", "Carline", "Sarah", "Nu", "Bernadine", "Meg", "Leif", "Nicolas", "Libbie", "Blanca", "Azzie", "Teresa", "Mack", "Bebe", "Cherise", "Breana", "Milan", "Shandi", "Thomas", "Shantae", "Jesusita", "Christene", "Cristopher", "Irving", "Stephenie", "Eda", "Luna", "Garth", "Neville", "Theda", "Shara"
+    "Haydee", "Anthony", "Laurine", "Ronald", "Jo", "Elliot", "Harriette", "Cristin", "Chad", "Jolynn", "Kum", "Cherish", "Felicitas", "Abbey", "Pamella", "Harry", "Clarice", "Lois", "Eugena", "Ivey", "Karlyn", "Evonne", "Isabel", "Aurea", "Hollis", "Linda", "Jamila", "Rose", "Dimple", "George", "Everett", "Lakeshia", "Benton", "Bennie", "Yen", "Lien", "Laraine", "Eufemia", "Lucile", "Walker", "Clare", "Tammie", "Brendan", "Hillary", "Meggan", "Norma", "Federico", "Bernard", "Rochell", "Ford",
+    "Alex", "Dane", "Rachel", "Joe", "Johnsie", "Amy", "Elly", "Floyd", "Chandra", "Dom", "Jenise", "Maureen", "Laura", "Darryl", "Miranda", "Justin", "Lucrecia", "Renita", "Sophia", "Robert", "Carline", "Sarah", "Marry", "Bernadine", "Meg", "Larry", "Nicolas", "Libbie", "Blanca", "Ashton", "Teresa", "Mack", "Bailey", "Cherise", "Breana", "Milan", "Shandi", "Thomas", "Shantae", "Jerry", "Christene", "Cristopher", "Irving", "Stephenie", "Eve", "Luna", "Garth", "Neville", "Theda", "Sarah"
   ];
   var cities = ["New York",
  "Los Angeles",
