--- a/snippets/product-simple.liquid
+++ b/snippets/product-simple.liquid
@@ -76,6 +76,9 @@
           
           <span class="h4 small-caps"><strong>Free Shipping</strong></span>
           <span class="small-caps"><small>(US & Canada)</small></span>
+          <br />
+          <p class="no-margin"><span class="small-caps">Ends Soon! Use Code:</span> <code>eoysale</code></p>
+          <h6>10% OFF ANY ORDER<h/6>
           
           <hr />
           {% endif %}
@@ -87,7 +90,7 @@
           <span class="price no-margin">
             {% if on_sale %}
             <ins>{{product.price | money }}</ins>
-            <del>{{product.compare_at_price | money }}</del>
+            <del><span style="color: red;">{{product.compare_at_price | money }}</span></del>
             {% else %}
             <ins>{{product.price | money }}</ins>
             {% endif %}
@@ -100,7 +103,7 @@
             <hr />
             {% else %}
 
-          {% if product.price == 6900 %}
+          {% if product.price == 5900 %}
           <br />
           <br />
           {% else %}
@@ -207,16 +210,18 @@
 </div>
 
 
-{% if product.title contains "Collaboration" or product.price == 6900 %}
+{% if product.title contains "Collaboration" or product.price == 5900 %}
 {% else %}
 <div class="container">
 
     <div class="tab-details-product style2">
       <ul class="box-tabs nav-tab">
         
+        {% unless product.title contains "Lunar" %}
         <li class="active"><a data-toggle="tab" href="#tab-1">Find Your Face</a></li>
+        {% endunless %}
 
-        <li><a data-toggle="tab" href="#tab-2">Size Guide</a></li>
+        <li class="{% if product.title contains "Lunar" %}active{% endif %}"><a data-toggle="tab" href="#tab-2">Size Guide</a></li>
 
         {% if false %}
           <li><a data-toggle="tab" href="#tab-3">{{settings.product_tab_title_3}}</a></li>
@@ -226,12 +231,13 @@
         {% endif %}
       </ul>
       <div class="tab-container">
-        
+        {% unless product.title contains "Lunar" %}
         <div id="tab-1" class="tab-panel active">
           {% include 'product-find-your-face' %}
         </div>
-        
-        <div id="tab-2" class="tab-panel text-center">
+        {% endunless %}
+       
+        <div id="tab-2" class="{% if product.title contains "Lunar" %}active{% endif %} tab-panel text-center">
           {% if product.title contains 'Fantom' %}
           <img class="col-md-6 pull-none col-xs-12" src="{{ 'fantom_size_guide_small.jpg' | asset_url }}" />
           {% elsif product.title contains 'Konvoy' %}
