--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -21,6 +21,24 @@
     {% include 'header-stylesheets' %}
     {% include 'header-scripts' %}
     {{ content_for_header }}
+  
+  
+<!-- Facebook Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+document,'script','https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '156715738012257');
+fbq('track', 'PageView');
+fbq('track', 'ViewContent'); 
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
+/></noscript>
+<!-- DO NOT MODIFY -->
+<!-- End Facebook Pixel Code -->
  
 
  <!-- Hits Analytics tracking code -->
