--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -17,7 +17,8 @@
 {% assign rows = settings.collections_rows %}
 {% assign total_products = products_per_row | times: rows %}
 
-<h1 class="jumbotron text-center shop-all-banner">Shop</h1>
+<h1 class="jumbotron text-center shop-all-banner hidden-xs">Shop</h1>
+<h1 class="jumbotron text-center shop-all-banner visible-xs" style="color: white;"><strong>Shop</strong></h1>
 
 <div class="main-container left-slidebar">
   <div class="container">
