linked faces; adjust banner

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -799,6 +799,9 @@ img.photo-cred {
 
 /* End Collab */
 /* Start Find Your Face */
+#wizard .results img:hover {
+  opacity: 0.5;
+}
 #wizard .step {
   margin-bottom: 5%;
 }
