--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -60,12 +60,13 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
  </head>
 <body class="home {% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" id="{{ page_title | handle }}" style="padding-right: 0;">
 <!--  NOT MOBILE  -->
-  <div class="text-center site-banner full-w row-eq-height hidden-xs"><p>FREE RETURNS on all purchases. Order by Dec. 20<sup>th</sup> to receive by Christmas.</p></div>
+  <div class="text-center site-banner full-w row-eq-height hidden-xs">
+    <p><strong>FREE RETURNS</strong> on all purchases.</p>
+  </div>
   
 <!--  MOBILE  -->
   <div class="visible-xs text-center site-banner full-w row-eq-height">
-    <p>FREE RETURNS on all purchases.</p>
-    <p class="small white">Order by Dec. 20<sup>th</sup> to receive by Christmas.</p>
+    <p><strong>FREE RETURNS on all purchases.</strong></p>
   </div>
   
   {% include 'header' %}
