--- a/snippets/header8.liquid
+++ b/snippets/header8.liquid
@@ -21,12 +21,12 @@
             </div>
           </div>
 
-          <div class="col-xs-2 col-sm-3 col-md-7 col-lg-8">
+          <div class="col-xs-2 col-sm-3 col-md-7">
             {% include 'menu_import' %}
             <span class="mobile-navigation"><i class="fa fa-bars"></i></span>
           </div>
 
-          <div class="col-xs-7 col-sm-7 col-md-3 col-lg-2 control-wapper">
+          <div class="col-xs-7 col-sm-7 col-md-3 control-wapper">
             <div class="box-control">
               {% assign position ="top-menu" %}
               {% include "mini-cart" %}
