--- a/templates/page.find-your-face.liquid
+++ b/templates/page.find-your-face.liquid
@@ -207,10 +207,103 @@
       
       <h2 class="step-message">Check Them Out | <div id="reset" class="btn btn-blue">Reset</div></h2>
 
+            <style>
+        .hovereffect {
+          width: 25%;
+          height: 100%;
+          float: left;
+          overflow: hidden;
+          position: relative;
+          text-align: center;
+          cursor: default;
+          overflow: hidden;
+          margin: 15px;
+/*           -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          -ms-border-radius: 50%;
+          -o-border-radius: 50%;
+          border-radius: 50%; */
+        }
+
+        .hovereffect .overlay {
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          overflow: hidden;
+          top: 0;
+          left: 0;
+          background-color: transparent;
+        }
+
+        .hovereffect img {
+          display: block;
+          position: relative;
+          -webkit-transition: all 0.4s ease-in;
+          transition: all 0.4s ease-in;
+        }
+
+        .hovereffect:hover img {
+          filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');
+          filter: grayscale(0.5) blur(1px);
+          -webkit-filter: grayscale(0.5) blur(1px);
+/*           -webkit-transform: scale(1.2);
+          -ms-transform: scale(1.2);
+          transform: scale(1.2); */
+        }
+
+        .hovereffect h2 {
+          text-transform: uppercase;
+          text-align: center;
+          font-weight: 900;
+          position: relative;
+          font-size: 15px;
+          padding: 10px;
+          background-color: rgba(0, 0, 0, 0.6);
+        }
+
+        .hovereffect a.info {
+          display: inline-block;
+          text-decoration: none;
+          padding: 7px 14px;
+          border: 1px solid #fff;
+          margin: 8px;
+          font-size: 10px;
+          background-color: transparent;
+        }
+
+        .hovereffect a.info:hover {
+          box-shadow: 0 0 5px #fff;
+          background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .hovereffect a.info, .hovereffect h2 {
+          -webkit-transform: scale(0.7);
+          -ms-transform: scale(0.7);
+          transform: scale(0.7);
+          -webkit-transition: all 0.4s ease-in;
+          transition: all 0.4s ease-in;
+          opacity: 0;
+          filter: alpha(opacity=0);
+          color: #fff;
+          text-transform: uppercase;
+        }
+
+        .hovereffect:hover a.info, .hovereffect:hover h2 {
+          opacity: 1;
+          filter: alpha(opacity=100);
+          -webkit-transform: scale(1);
+          -ms-transform: scale(1);
+          transform: scale(1);
+        }
+      </style>
+      
+      
+      
 {% include 'find-your-face-counts' %}
   {% for face in face_matrix %}
     {% assign count = face | split: "-" | last %}
     {% for i in (1..count) %}
+
       {% assign full_path = face | split: "-" %}
       {% assign path = full_path[0] | append: "-" | append: full_path[1] | append: "-" | append: full_path[2] | append: "-" | append: full_path[3] %}
       {% assign prod = face | split: "-" | first %}
@@ -222,10 +315,30 @@
       {% when "heron" %}
       {% assign prod_num = 3 %}
       {% endcase %}
+
+
+
+<!--      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12"> -->
+        <div class="hovereffect">
+<!--           <a class="full-w" href="{{ collections["classic"].products[prod_num].url }}" title="{{ prod }}"> -->
+            <img class="img-responsive" src="" data-src="{{ path | append: "-" | append: i | append: ".jpg" | file_url }}" data-filter="{{ path }}">
+<!--           </a> -->
+          <div class="overlay">
+            <h2 class="shop-banner">Shop {{ prod }}</h2>
+            {% for type in collections["classic"].products %}
+            {% assign title = type.title | downcase %}
+            {% if title contains prod %}
+            <a class="info" href="{{ type.url }}">{{ title | split: " " | first | capitallize }}</a>
+            {% endif %}
+            {% endfor %}
+          </div>
+        </div>
+<!--       </div> -->
+
       
-      <a href="{{ collections["classic"].products[prod_num].url }}" title="{{ prod }}">
+<!--       <a href="{{ collections["classic"].products[prod_num].url }}" title="{{ prod }}">
         <img src="" data-src="{{ path | append: "-" | append: i | append: ".jpg" | file_url }}" data-filter="{{ path }}">
-      </a>
+      </a> -->
 
     {% endfor %}
   {% endfor %}
